--- a/PanelControl/style.css
+++ b/PanelControl/style.css
@@ -7,40 +7,45 @@
 
 body{
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     background-image: url(img/fondo1.jpeg);
     background-size: cover;
 }
 
-.information {
+.container-form {
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between; 
     align-items: center;
-    justify-content: center;
-}
-.information h2{
-    font-size: 2.5rem;
-    color: #333;
-}
-.information h3{
-    font-size: 2.5rem;
-    color: #333;
+    height: 100vh;
+    width: 80%;
+    margin-top: 20px; /* Ajusta el margen vertical */
 }
 
-.container-form {
+.categories{
+    margin-top: 30px;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 5px 7px rgb(0, 0, 0, .1);
+    width: 100%;
+}
+.categories-info{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    width: 40%; 
+    text-align: center;
 }
 
 .form-information {
     display: flex;
+    padding: 10px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 70%; 
     text-align: center;
 }
 
@@ -52,7 +57,11 @@ body{
     box-shadow: 0 5px 7px rgb(0, 0, 0, .1);
     width: 100%;
 }
-
+ 
+.forms h3{
+    font-size: 2.5rem;
+    color: #333;
+}
 .forms label {
     display: flex;
     align-items: center;
@@ -65,7 +74,15 @@ body{
     font-size: 1.2rem;
     color: #000;
 }
-
+.textbox {
+    width: 200px;
+    height: 120px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 25px;
+    color: #333;
+}
 .forms label input {
     width: calc(100% - 40px); 
     padding: 10px;
@@ -75,8 +92,9 @@ body{
     border-radius: 20px;
     color: #333;
 }
+
 .forms input[type="submit"]{
-    background-color: #f88c4e;
+    background-color: #4eacf8;
     color: #fff;
     border-radius: 20px;
     border: none;
@@ -85,12 +103,10 @@ body{
     margin-top: 10px;
     box-shadow: 0 5px 7px rgb(0, 0, 0, .1);
 }
+
 .forms input[type="submit"]:hover{
     background-color: #84e770;
     border: none;
     color: #fff;
     box-shadow: 0 2px 5px rgb(0, 0, 0, .1);
 }
-
-
-
