--- a/Lobby/estilos.css
+++ b/Lobby/estilos.css
@@ -76,18 +76,24 @@ h1 {
 .exit{
 	background-color: #f8cb4e;
     color: #ffffff;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
-    padding: 10px 15px;
+    padding: 15px 8px;
     cursor: pointer
 }
+
+.exit {
+	position: fixed;
+	top: 20px;
+	right: 10px; 
+  }
 
 .exit:hover{
 	background-color: #f10202;
     color: #ffffff;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
-    padding: 10px 15px;
+    padding: 15px 8px;
     cursor: pointer
 }
 .modal {
@@ -142,4 +148,41 @@ h1 {
 
 .dificultad:hover {
     opacity: 0.8;
+}
+
+.name-players{
+	position: fixed;
+	padding: 10px ;
+	top: 20px;
+	left: 10px;
+	font-size: 30px;
+	color: #2f70e9;
+	border: 2px solid #055dff;
+	border-radius: 10px;
+}
+
+
+.fichasplayer {
+	display: inline-flex; 
+	padding: 10px;
+	border: 2px solid #ff8800;
+	border-radius: 10px;
+	position: fixed;
+	top: 20px;
+	right: 150px; 
+	align-items: center; 
+	
+}
+
+#totalFichas img {
+	margin-right: 5px; 
+}
+
+#totalFichas p {
+	margin-right: 10px;
+	margin-bottom: 0;
+	color: #f8cb4e;
+}
+#totalFichas button {
+	padding: 3px 5px;
 }
