--- a/PAGINA/assets/css/style.css
+++ b/PAGINA/assets/css/style.css
@@ -7,20 +7,18 @@ body {
     background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
     background-size: cover;
     background-position: center; 
-    background-repeat: no-repeat;
   }
 /*** ESTILOS BOTÓN GROW ELLIPSE ***/
 #ov-btn-grow-ellipse {
-  background: #fff; /* color de fondo */
-  color: #4741d7; /* color de fuente */
-  border: 2px solid #4741d7; /* tamaño y color de borde */
+  background: #fff; 
+  color: #4741d7;
+  border: 2px solid #4741d7; 
   padding: 10px 10px;
-  border-radius: 3px; /* redondear bordes */
-  z-index: 1;
+  border-radius: 3px; 
   overflow: hidden;
   display: inline-block;
   position: fixed;
-  top: 1px;
+  top: 2px;
   right: 10px;
   z-index: 9999;
 }
@@ -29,7 +27,7 @@ body {
 }
 #ov-btn-grow-ellipse::after {
   content: "";
-  background: #4741d7; /* color de fondo hover */
+  background: #4741d7; 
   position: absolute;
   z-index: -1;
   padding: 10px 10px;
@@ -46,105 +44,19 @@ body {
   transition: all 0.6s ease-out;
   transform: scale(1, 1);
 }
-/* Estilos para la barra de usuario */
-#userBar {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: right;
-  }
-  
-  /* Estilos para el marco del nombre de usuario */
-  #usuarioFrame {
-    border: 1px solid #f2f2f2;
-    border-radius: 5px;
-    padding: 5px 10px;
-    display: inline-block;
-  }
-  
-  /* Estilos para el nombre de usuario */
-  #usuario {
-    display: inline-block;
-    margin-right: 120px;
-  }
-  
-  #mainContainer {
-    display: flex; /* Usar flexbox */
-  }
-  /* Estilos para el marco general de las categorías */
-  #sidebar {
-    border: 1px solid #701d1d;
-    background: #FFEFBA;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #FFEFBA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    width: 200px;
-    padding: 10px;
-    border-radius: 5px;
-    width: fit-content; 
-    margin-top: 20px;
-  }
-  
-  /* Estilos para cada categoría */
-  #sidebar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0; 
-  }
-  
-  #sidebar li {
-    margin-bottom: 5px;
-  }
-  
-  #sidebar li a {
-    display: block;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  #sidebar li a:hover {
-    background-color: #e0e0e0;
-  }
-
-  /* Estilos para los elementos <li> dentro del sidebar */
-#sidebar ul li {
-  list-style: none; 
-  margin-bottom: 10px;
-  transition: background-color 0.3s linear;
-}
-
-/* Estilos para los enlaces dentro de los elementos <li> */
-#sidebar ul li a {
-  text-decoration: none; 
-  color: #333; 
-  display: block; 
-  padding: 10px; 
-  background-color: #ddd; 
-  border-radius: 5px;
-  transition: background-color 0.3s ease; 
-}
-
-#sidebar ul li a:hover {
-  background-color: #ccc;
-}
-
 /* Estilos para el marco central */
 #centerFrame {
-    flex: 1; 
-    padding: 20px;
-    background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
-    border: 1px solid #701d1d;
-    height: 400px;
-    border-radius: 5px;
-    margin-left: 20px;
-    margin-top: 20px; 
-    clear: both; 
-    
-  }
+  width: 80%; /* Ancho del elemento */
+  margin: auto; /* Centra horizontalmente */
+  padding: 20px;
+  background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);
+  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
+  border: 1px solid #701d1d;
+  height: 400px;
+  border-radius: 5px;
+  margin-top: 90px;
+  position: relative;
+}
 
   /* Estilos para los corazones en el contenedor de vidas */
 #vidas {
@@ -250,4 +162,80 @@ body {
 
 #juego button:hover {
   background-color: #0056b3; 
+}
+
+
+progress[value] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	border: none;
+	width: 570px;
+	height: 30px;
+	overflow:hidden;
+	background-color:#D8D8D8;
+	border-radius : 20px ; 
+  
+}
+
+.progress-container {
+  position: fixed;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%; 
+}
+
+.progress {
+  display: inline-block;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+
+.progress span{
+	font-weight:bold;
+  
+}
+progress::-moz-progress-bar{ 
+	background: #FF8000;
+	background: rgba(255,175,75,1);
+	border-radius : 20px ; 
+} 
+progress::-webkit-progress-bar { 
+	background-color:#D8D8D8;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+	border-radius : 20px ; 
+	
+}
+.name-player{
+	position: fixed;
+	padding: 10px ;
+	top: 2px;
+	left: 10px;
+	font-size: 20px;
+	color: #fafafa;
+	border: 2px solid #055dff;
+	border-radius: 10px;
+}
+.fichasplayer {
+	display: inline-flex; 
+	padding: 10px;
+	border: 2px solid #ff8800;
+	border-radius: 10px;
+	position: fixed;
+	top: 2px;
+	right: 100px; 
+	align-items: center; 
+}
+
+#totalFichas img {
+	margin-right: 5px; 
+}
+
+#totalFichas p {
+	margin-right: 10px;
+	margin-bottom: 0;
+}
+#totalFichas button {
+	padding: 3px 5px;
 }
