--- a/Lobby/button.css
+++ b/Lobby/button.css
@@ -29,6 +29,11 @@
 	left: 40%;
 }
 
+.boton.siete span {
+	transition: .4s ease-in-out all;
+	position: absolute;
+	left: 40%;
+}
 
 
 .boton.uno .icono {
@@ -86,6 +91,16 @@
 	opacity: 0;
 }
 
+.boton.siete .icono {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	z-index: 2;
+	left: -40px;
+	transition: .3s ease-in-out all;
+	opacity: 0;
+}
+
 
 
 .boton.uno svg {
@@ -114,6 +129,11 @@
 	height: 35px;
 }
 .boton.seis svg {
+	color: #fff;
+	width: 35px;
+	height: 35px;
+}
+.boton.siete svg {
 	color: #fff;
 	width: 35px;
 	height: 35px;
@@ -164,6 +184,11 @@
 
 }
 
+.boton.seis:hover {
+	background: #ff8a05;
+	height: 85px;
+	width: 375px;
+}
 
 
 .boton.uno:hover .icono {
@@ -191,6 +216,10 @@
 	opacity: 1;
 }
 
+.boton.siete:hover .icono {
+	left: calc(100% - 50px);
+	opacity: 1;
+}
 
 
 .boton.uno:hover span {
@@ -209,5 +238,8 @@
 	left: 20px;
 }
 .boton.seis:hover span {
+	left: 20px;
+}
+.boton.siete:hover span {
 	left: 20px;
 }
