--- a/PAGINA/assets/css/style.css
+++ b/PAGINA/assets/css/style.css
@@ -2,14 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: #C6FFDD;
-    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  
+    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
     background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
     background-size: cover;
     background-position: center; 
   }
 /*** ESTILOS BOTÓN GROW ELLIPSE ***/
-#ov-btn-grow-ellipse {
+.ov-btn-grow-ellipse {
   background: #fff; 
   color: #4741d7;
   border: 2px solid #4741d7; 
@@ -22,10 +21,10 @@ body {
   right: 10px;
   z-index: 9999;
 }
-#ov-btn-grow-ellipse:hover {
+.ov-btn-grow-ellipse:hover {
   color: #fff;/* color de fuente hover */
 }
-#ov-btn-grow-ellipse::after {
+.ov-btn-grow-ellipse::after {
   content: "";
   background: #4741d7; 
   position: absolute;
@@ -40,7 +39,7 @@ body {
   transform: scale(0, 0);
   transition: all 0.4s ease;
 }
-#ov-btn-grow-ellipse:hover::after {
+.ov-btn-grow-ellipse:hover::after {
   transition: all 0.6s ease-out;
   transform: scale(1, 1);
 }
@@ -64,83 +63,14 @@ body {
   color: red; 
 }
 
-/*** ESTILOS BOTÓN SLIDE RIGHT ***/
-.ov-btn-slide-right {
-  background: #fff; 
-  color: #4741d7; 
-  border: 2px solid #4741d7; 
-  padding: 16px 20px;
-  border-radius: 3px; 
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  display: inline-block;
-}
-.ov-btn-slide-right:hover {
-  color: #fff; 
-}
-.ov-btn-slide-right::after {
-  content: "";
-  background: #4741d7; 
-  position: absolute;
-  z-index: -1;
-  padding: 16px 20px;
-  display: block;
-  top: 0;
-  bottom: 0;
-  left: 100%;
-  right: -100%;
-  -webkit-transition: all 0.35s;
-  transition: all 0.35s;
-}
-.ov-btn-slide-right:hover::after {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  -webkit-transition: all 0.35s;
-  transition: all 0.35s;
-}
-
-.ov-btn-grow-box {
-  background: #fff; 
-  color: #5550cb; 
-  border: 2px solid #4187d7; 
-  padding: 16px 20px;
-  border-radius: 3px; 
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  display: inline-block;
-}
-.ov-btn-grow-box:hover {
-  color: #fff;
-}
-.ov-btn-grow-box::after {
-  content: "";
-  background: #4741d7; 
-  position: absolute;
-  z-index: -1;
-  padding: 16px 20px;
-  display: block;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transform: scale(0, 0);
-  transition: all 0.3s ease;
-}
-.ov-btn-grow-box:hover::after {
-  transition: all 0.3s ease-out;
-  transform: scale(1, 1);
-}
-
 #footer {
   background-color: #333; 
   color: white; 
   padding: 20px; 
   text-align: center; 
 }
+
+
 #juego {
   text-align: center;
 }
@@ -164,26 +94,14 @@ body {
   background-color: #0056b3; 
 }
 
-
-progress[value] {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border: none;
-	width: 570px;
-	height: 30px;
-	overflow:hidden;
-	background-color:#D8D8D8;
-	border-radius : 20px ; 
-  
-}
-
 .progress-container {
-  position: fixed;
-  bottom: 150px;
+  position: absolute; /* Use absolute positioning to stay within the parent container */
+  bottom: 50px; /* Adjust this value as needed */
   left: 50%;
   transform: translateX(-50%);
-  width: 100%; 
+  width: 100%;
+  display: flex;
+  justify-content: center; /* Center the progress bar horizontally */
 }
 
 .progress {
@@ -192,20 +110,36 @@ progress[value] {
   margin-bottom: 20px;
 }
 
-.progress span{
-	font-weight:bold;
-  
+progress[value] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  width: 570px;
+  height: 30px;
+  overflow: hidden;
+  background-color: #D8D8D8;
+  border-radius: 20px;
 }
-progress::-moz-progress-bar{ 
-	background: #FF8000;
-	background: rgba(255,175,75,1);
-	border-radius : 20px ; 
-} 
-progress::-webkit-progress-bar { 
-	background-color:#D8D8D8;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-	border-radius : 20px ; 
-	
+
+progress::-moz-progress-bar {
+  background: rgba(255, 175, 75, 1);
+  border-radius: 20px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #D8D8D8;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  border-radius: 20px;
+}
+
+progress::-webkit-progress-value {
+  background: rgba(255, 175, 75, 1);
+  border-radius: 20px;
+}
+
+.progress span {
+  font-weight: bold;
 }
 .name-player{
 	position: fixed;
@@ -213,12 +147,14 @@ progress::-webkit-progress-bar {
 	top: 2px;
 	left: 10px;
 	font-size: 20px;
-	color: #fafafa;
+	color: #030303;
+  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
 	border: 2px solid #055dff;
 	border-radius: 10px;
 }
 .fichasplayer {
 	display: inline-flex; 
+  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
 	padding: 10px;
 	border: 2px solid #ff8800;
 	border-radius: 10px;
@@ -238,4 +174,19 @@ progress::-webkit-progress-bar {
 }
 #totalFichas button {
 	padding: 3px 5px;
+}
+
+.vidas-container {
+  position: absolute; /* Cambiado a absolute para que se posicione relativo al contenedor */
+  bottom: 20px; /* Posición en la parte inferior */
+  right: 20px; /* Posición en la parte derecha */
+  display: flex;
+  align-items: center;
+  color: #333;
+}
+
+.corazon {
+  width: 24px;
+  height: auto;
+  margin-right: 5px;
 }
