--- a/QuizMaster/Lobby/estilos.css
+++ b/QuizMaster/Lobby/estilos.css
@@ -9,11 +9,12 @@ body {
 	background-image: url("img/fondo2.jpeg");
 	font-family: 'Bauhaus 93', sans-serif;
 	min-height: 100vh;
-	background-size: 1350px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
     padding: 0;
+	background-size: cover;
+    background-position: center; 
 }
 
 .contenedor {
@@ -75,18 +76,116 @@ h1 {
 }
 .exit{
 	background-color: #f8cb4e;
-    color: #fff;
-    border-radius: 20px;
+    color: #ffffff;
+    border-radius: 10px;
     border: none;
-    padding: 10px 15px;
+    padding: 15px 8px;
     cursor: pointer
 }
 
+.exit {
+	position: fixed;
+	top: 20px;
+	right: 10px; 
+  }
+
 .exit:hover{
 	background-color: #f10202;
-    color: #fff;
-    border-radius: 20px;
+    color: #ffffff;
+    border-radius: 10px;
     border: none;
-    padding: 10px 15px;
+    padding: 15px 8px;
     cursor: pointer
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-contenido {
+    background-color: white;
+    margin: 20% auto;
+    padding: 20px;
+    width: 60%;
+    text-align: center;
+    position: relative; 
+}
+
+#cerrarModal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    color: #ff0000;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.dificultad {
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+#Facil {
+    background-color: #007bff; /* Azul */
+}
+
+#Intermedio {
+    background-color: #28a745; /* Verde */
+}
+
+#Dificil {
+    background-color: #dc3545; /* Rojo */
+}
+
+.dificultad:hover {
+    opacity: 0.8;
+}
+
+.name-players{
+	position: fixed;
+	padding: 10px ;
+	top: 2px;
+	left: 10px;
+	font-size: 20px;
+	color: #52175e;
+  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
+	border: 2px solid #055dff;
+	border-radius: 10px;
+}
+
+
+.fichasplayer {
+	display: inline-flex; 
+	padding: 10px;
+	background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
+	border: 2px solid #000000;
+	border-radius: 10px;
+	position: fixed;
+	top: 20px;
+	right: 150px; 
+	align-items: center; 
+	
+}
+
+#totalFichas img {
+	margin-right: 5px; 
+}
+
+#totalFichas p {
+	margin-right: 10px;
+	margin-bottom: 0;
+	color: #161616;
+}
+#totalFichas button {
+	padding: 3px 5px;
 }
