--- a/PAGINA/assets/css/style.css
+++ b/PAGINA/assets/css/style.css
@@ -1,82 +1,241 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: #C6FFDD;
-  background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
-  background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-/* Estilos para el nombre de usuario */
-#usuario {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #C6FFDD;
+    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  
+    background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
+    background-size: cover;
+    background-position: center; 
+  }
+/*** ESTILOS BOTÓN GROW ELLIPSE ***/
+#ov-btn-grow-ellipse {
+  background: #fff; 
+  color: #4741d7;
+  border: 2px solid #4741d7; 
+  padding: 10px 10px;
+  border-radius: 3px; 
+  overflow: hidden;
   display: inline-block;
-  margin-right: 120px;
+  position: fixed;
+  top: 2px;
+  right: 10px;
+  z-index: 9999;
+}
+#ov-btn-grow-ellipse:hover {
+  color: #fff;/* color de fuente hover */
+}
+#ov-btn-grow-ellipse::after {
+  content: "";
+  background: #4741d7; 
+  position: absolute;
+  z-index: -1;
+  padding: 10px 10px;
+  display: block;
+  border-radius: 50%;
+  left: -50%;
+  right: -50%;
+  top: -150%;
+  bottom: -150%;
+  transform: scale(0, 0);
+  transition: all 0.4s ease;
+}
+#ov-btn-grow-ellipse:hover::after {
+  transition: all 0.6s ease-out;
+  transform: scale(1, 1);
 }
 /* Estilos para el marco central */
 #centerFrame {
-  flex: 1;
+  width: 80%; /* Ancho del elemento */
+  margin: auto; /* Centra horizontalmente */
   padding: 20px;
   background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #FFEFBA);
+  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
   border: 1px solid #701d1d;
   height: 400px;
   border-radius: 5px;
-  margin-left: 20px;
-  margin-top: 20px;
-  clear: both;
-
+  margin-top: 90px;
+  position: relative;
 }
 
-/* Estilos para los corazones en el contenedor de vidas */
+  /* Estilos para los corazones en el contenedor de vidas */
 #vidas {
-  font-size: 24px;
-  color: red;
-}
-#footer {
-  background-color: #333;
-  color: white;
-  padding: 20px;
-  text-align: center;
+  font-size: 24px; 
+  color: red; 
 }
 
+/*** ESTILOS BOTÓN SLIDE RIGHT ***/
+.ov-btn-slide-right {
+  background: #fff; 
+  color: #4741d7; 
+  border: 2px solid #4741d7; 
+  padding: 16px 20px;
+  border-radius: 3px; 
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: inline-block;
+}
+.ov-btn-slide-right:hover {
+  color: #fff; 
+}
+.ov-btn-slide-right::after {
+  content: "";
+  background: #4741d7; 
+  position: absolute;
+  z-index: -1;
+  padding: 16px 20px;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 100%;
+  right: -100%;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+.ov-btn-slide-right:hover::after {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.ov-btn-grow-box {
+  background: #fff; 
+  color: #5550cb; 
+  border: 2px solid #4187d7; 
+  padding: 16px 20px;
+  border-radius: 3px; 
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: inline-block;
+}
+.ov-btn-grow-box:hover {
+  color: #fff;
+}
+.ov-btn-grow-box::after {
+  content: "";
+  background: #4741d7; 
+  position: absolute;
+  z-index: -1;
+  padding: 16px 20px;
+  display: block;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transform: scale(0, 0);
+  transition: all 0.3s ease;
+}
+.ov-btn-grow-box:hover::after {
+  transition: all 0.3s ease-out;
+  transform: scale(1, 1);
+}
+
+#footer {
+  background-color: #333; 
+  color: white; 
+  padding: 20px; 
+  text-align: center; 
+}
 #juego {
   text-align: center;
 }
 
 #juego h2 {
-  color: #000000;
-  margin-bottom: 20px;
+  color: #000000; 
+  margin-bottom: 20px; 
 }
 
 #juego button {
-  background-color: #007bff;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  margin: 5px;
-  cursor: pointer;
+  background-color: #007bff; 
+  color: white; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 5px; 
+  margin: 5px; 
+  cursor: pointer; 
 }
 
 #juego button:hover {
-  background-color: #0056b3;
+  background-color: #0056b3; 
 }
 
-.vidas-container {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  display: flex;
-  align-items: center;
-  color: #333;
+
+progress[value] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	border: none;
+	width: 570px;
+	height: 30px;
+	overflow:hidden;
+	background-color:#D8D8D8;
+	border-radius : 20px ; 
+  
 }
 
-.corazon {
-  width: 24px;
-  height: auto;
-  margin-right: 5px;
+.progress-container {
+  position: fixed;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%; 
+}
+
+.progress {
+  display: inline-block;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+
+.progress span{
+	font-weight:bold;
+  
+}
+progress::-moz-progress-bar{ 
+	background: #FF8000;
+	background: rgba(255,175,75,1);
+	border-radius : 20px ; 
+} 
+progress::-webkit-progress-bar { 
+	background-color:#D8D8D8;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+	border-radius : 20px ; 
+	
+}
+.name-player{
+	position: fixed;
+	padding: 10px ;
+	top: 2px;
+	left: 10px;
+	font-size: 20px;
+	color: #fafafa;
+	border: 2px solid #055dff;
+	border-radius: 10px;
+}
+.fichasplayer {
+	display: inline-flex; 
+	padding: 10px;
+	border: 2px solid #ff8800;
+	border-radius: 10px;
+	position: fixed;
+	top: 2px;
+	right: 100px; 
+	align-items: center; 
+}
+
+#totalFichas img {
+	margin-right: 5px; 
+}
+
+#totalFichas p {
+	margin-right: 10px;
+	margin-bottom: 0;
+}
+#totalFichas button {
+	padding: 3px 5px;
 }
