--- a/Lobby/button.css
+++ b/Lobby/button.css
@@ -29,6 +29,11 @@
 	left: 40%;
 }
 
+.boton.siete span {
+	transition: .4s ease-in-out all;
+	position: absolute;
+	left: 40%;
+}
 
 
 .boton.uno .icono {
@@ -86,36 +91,51 @@
 	opacity: 0;
 }
 
+.boton.siete .icono {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	z-index: 2;
+	left: -40px;
+	transition: .3s ease-in-out all;
+	opacity: 0;
+}
+
 
 
 .boton.uno svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
 	height: 35px;
 }
 .boton.dos svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
 	height: 35px;
 }
 .boton.tres svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
 	height: 35px;
 }
 .boton.cuatro svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
 	height: 35px;
 }
 .boton.cinco svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
 	height: 35px;
 }
 .boton.seis svg {
 	color: #fff;
-	width: 35px;
+	width: auto;
+	height: 35px;
+}
+.boton.siete svg {
+	color: #fff;
+	width: auto;
 	height: 35px;
 }
 
@@ -125,44 +145,45 @@
 	background: #ff8a05;
 	background-image: url("img/hist.jpg");
 	height: 85px;
-	width: 375px;
+	width: auto;
 	
 }
 .boton.dos:hover {
 	background: #ff8a05;
 	background-image: url("img/geog.jpg");
 	height: 85px;
-	width: 375px;
+	width: auto;
 	
 }
 .boton.tres:hover {
 	background: #ff8a05;
 	background-image: url("img/fisica.jpg");
 	height: 85px;
-	width: 375px;
+	width: auto;
 
 }
 .boton.cuatro:hover {
 	background: #ff8a05;
 	background-image: url("img/mat.jpg");
 	height: 85px;
-	width: 375x;
+	width: auto;
 
 }
 .boton.cinco:hover {
 	background: #ff8a05;
 	background-image: url("img/dep.jpg");
 	height: 85px;
-	width: 375px;
+	width: auto;
 
 }
 .boton.seis:hover {
 	background: #ff8a05;
 	background-image: url("img/bio.jpg");
 	height: 85px;
-	width: 375px;
+	width: auto;
 
 }
+
 
 
 
@@ -191,6 +212,10 @@
 	opacity: 1;
 }
 
+.boton.siete:hover .icono {
+	left: calc(100% - 50px);
+	opacity: 1;
+}
 
 
 .boton.uno:hover span {
@@ -209,5 +234,8 @@
 	left: 20px;
 }
 .boton.seis:hover span {
+	left: 20px;
+}
+.boton.siete:hover span {
 	left: 20px;
 }
