--- a/Lobby/estilos.css
+++ b/Lobby/estilos.css
@@ -18,15 +18,20 @@ body {
 }
 
 .contenedor {
-	width: 1200px;
+	text-align: center;
+  	padding: 20px;
+	align-items: center;
+	margin-top: 20px;
+}
+.contenedores {
+	width: 100%;
+	max-width: 1200px;
 	margin: auto;
-	padding: 100px 0;
+	padding: 50px 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 }
-
 h1 {
 	font-size: 58px;
 	font-weight: 500;
@@ -46,8 +51,32 @@ h1 {
 	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 40px;
+	gap: 20px;
 }
+.modorandom{
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+.modorandom span{
+	transition: .4s ease-in-out all;
+	position: absolute;
+	left: 40%;
+	color: #fff;
+	width: 35px;
+}
+.modorandom button{
+	height: 85px;
+	width: 255px;
+}
+.modorandom button:hover{
+	background: #9fff05;
+	height: 85px;
+	width: 255px;
+}
+
 
 .boton {
 	display: inline-flex;
@@ -154,11 +183,11 @@ h1 {
 .name-players{
 	position: fixed;
 	padding: 10px ;
-	top: 2px;
+	top: 20px;
 	left: 10px;
 	font-size: 20px;
 	color: #52175e;
-  background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
+  	background: linear-gradient(to right, #FFFFFF, #FFEFBA); 
 	border: 2px solid #055dff;
 	border-radius: 10px;
 }
